@@ -1,4 +1,6 @@
 v2.6.4.1 - Made autofit work in EDL timeline when switching images.
+	 - Fixed loading of a single image which would always load all images
+	   in a sequence.
 v2.6.4.0 - Added a starting audio volume preference to the default 
 	   audio preferences.
 	 - Made preferences run when the user hits ok.  Previously ok did
